--- a/jquery.minesweeper.js/test/theminesweeper.html
+++ b/jquery.minesweeper.js/test/theminesweeper.html
@@ -3,8 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>The Minesweeper Test Suite</title>
-  <!-- Load local jQuery. This can be overridden with a ?jquery=___ param. -->
-  <script src="../libs/jquery-loader.js"></script>
+  <!-- Load libs. -->
+  <script src="../libs/jquery/jquery.js"></script>
+  <script src="../libs/jquery-ui/jquery.ui.button.min.js"></script>
+  <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
+  <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
+  <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
   <!-- Load local QUnit. -->
   <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
   <script src="../libs/qunit/qunit.js"></script>
