--- a/jquery.minesweeper.js/test/theminesweeper.html
+++ b/jquery.minesweeper.js/test/theminesweeper.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>The Minesweeper Test Suite</title>
-  <!-- Load libs. -->
-  <script src="../libs/jquery/jquery.js"></script>
-  <script src="../libs/jquery-ui/jquery.ui.button.min.js"></script>
-  <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
-  <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
-  <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
-  <!-- Load local QUnit. -->
-  <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
-  <script src="../libs/qunit/qunit.js"></script>
-  <!-- Load local lib and tests. -->
-  <script src="../src/jquery.theminesweeper.js"></script>
-  <script src="theminesweeper_test.js"></script>
-  <!-- Removing access to jQuery and $. But it'll still be available as _$, if
-       you REALLY want to mess around with jQuery in the console. REMEMBER WE
-       ARE TESTING A PLUGIN HERE, THIS HELPS ENSURE BEST PRACTICES. REALLY. -->
-  <script>window._$ = jQuery.noConflict(true);</script>
-</head>
-<body>
-  <div id="qunit"></div>
-  <div id="qunit-fixture">
-    <span>lame test markup</span>
-    <span>normal test markup</span>
-    <span>awesome test markup</span>
-  </div>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <title>The Minesweeper Test Suite</title>
+        <!-- Load libs. -->
+        <script src="../libs/jquery/jquery.js"></script>
+        <script src="../libs/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
+        <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
+        <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
+        <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
+        <!-- Load local QUnit. -->
+        <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
+        <script src="../libs/qunit/qunit.js"></script>
+        <!-- Load local lib and tests. -->
+        <script src="../src/jquery.theminesweeper.js"></script>
+        <script src="theminesweeper_test.js"></script>
+        <!-- Removing access to jQuery and $. But it'll still be available as _$, if
+            you REALLY want to mess around with jQuery in the console. REMEMBER WE
+            ARE TESTING A PLUGIN HERE, THIS HELPS ENSURE BEST PRACTICES. REALLY. -->
+        <script>window._$ = jQuery.noConflict(true); </script>
+    </head>
+    <body>
+        <div id="qunit"></div>
+        <div id="qunit-fixture">
+        <span>lame test markup</span>
+        <span>normal test markup</span>
+        <span>awesome test markup</span>
+        </div>
+    </body>
 </html>
