--- a/jquery.minesweeper.js/example/example.html
+++ b/jquery.minesweeper.js/example/example.html
@@ -10,6 +10,7 @@
         <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
         <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
         <!-- Load local lib -->
+        <link rel="stylesheet" href="../src/jquery.theminesweeper.css">
         <script src="../src/jquery.theminesweeper.js"></script>
     </head>
     <body>
