show region recursive

--- a/example/example.html
+++ b/example/example.html
@@ -16,7 +16,9 @@
     <body>
         <div id="ms"></div>
         <script>
-            $('#ms').theminesweeper();
+//$('#ms').theminesweeper({
+            //levels: [ {height:16, width:16, mines:40}]});
+        $('#ms').theminesweeper();
         </script>
     </body>
 </html>
