styling and flagging support

--- a/example/example.html
+++ b/example/example.html
@@ -8,6 +8,7 @@
         <script src="../libs/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
         <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
         <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
+        <script src="../libs/masonry.min.js"></script>
         <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
         <!-- Load local lib -->
         <link rel="stylesheet" href="../src/jquery.theminesweeper.css">
@@ -18,7 +19,7 @@
         <script>
 //$('#ms').theminesweeper({
             //levels: [ {height:16, width:16, mines:40}]});
-        $('#ms').theminesweeper();
+        $('#ms').theminesweeper().draggable();
         </script>
     </body>
 </html>
