smiley support/added images

--- a/example/example.html
+++ b/example/example.html
@@ -17,9 +17,9 @@
     <body>
         <div id="ms"></div>
         <script>
-$('#ms').theminesweeper({
-            levels: [ {height:16, width:16, mines:40}]});
- //       $('#ms').theminesweeper().draggable();
+//$('#ms').theminesweeper({
+  //          levels: [ {height:16, width:16, mines:40}]});
+        $('#ms').theminesweeper().draggable();
         </script>
     </body>
 </html>
