--- a/example/example.html
+++ b/example/example.html
@@ -18,9 +18,9 @@
     <body>
         <div id="ms"></div>
         <script>
-$('#ms').theminesweeper({
-            levels: [ {height:16, width:16, mines:40}]}).draggable();
- //       $('#ms').theminesweeper().draggable();
+//$('#ms').theminesweeper({
+  //          levels: [ {height:16, width:16, mines:40}]}).draggable();
+        $('#ms').theminesweeper().draggable();
         </script>
     </body>
 </html>
