--- a/example/example.html
+++ b/example/example.html
@@ -6,12 +6,11 @@
         <!-- Load libs -->
         <script src="../libs/jquery/jquery.js"></script>
         <script src="../libs/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
-        <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
-        <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
         <script src="../libs/masonry.min.js"></script>
         <script src="../libs/jquery.timer.js"></script>
-        <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
-        <!-- Load local lib -->
+        <!-- for theme from the themeroller -->
+        <link rel="stylesheet" href="../libs/jquery-ui/theme/jquery-ui.min.css">
+        <!-- Load the plugin -->
         <link rel="stylesheet" href="../src/jquery.theminesweeper.css">
         <script src="../src/jquery.theminesweeper.js"></script>
     </head>
