--- a/test/theminesweeper.html
+++ b/test/theminesweeper.html
@@ -6,9 +6,9 @@
         <!-- Load libs. -->
         <script src="../libs/jquery/jquery.js"></script>
         <script src="../libs/jquery-ui/jquery-ui-1.10.4.custom.min.js"></script>
-        <script src="../libs/jquery-ui/jquery.ui.core.min.js"></script>
-        <script src="../libs/jquery-ui/jquery.ui.widget.min.js"></script>
-        <link rel="stylesheet" href="../libs/jquery-ui/jquery-ui.min.css">
+        <script src="../libs/masonry.min.js"></script>
+        <script src="../libs/jquery.timer.js"></script>
+        <link rel="stylesheet" href="../libs/jquery-ui/theme/jquery-ui.min.css">
         <!-- Load local QUnit. -->
         <link rel="stylesheet" href="../libs/qunit/qunit.css" media="screen">
         <script src="../libs/qunit/qunit.js"></script>
