--- a/example/minesweeper_advanced.html
+++ b/example/minesweeper_advanced.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="../libs/jquery-ui/theme/jquery-ui.min.css">
         <!-- Load the plugin -->
         <link rel="stylesheet" href="css/jquery.theminesweeper.advanced.css">
-        <script src="../dist/jquery.theminesweeper.js"></script>
+        <script src="../dist/jquery.theminesweeper.min.js"></script>
     </head>
     <body>
         <div id="ms"></div>
