--- a/example/minesweeper_intermediate.html
+++ b/example/minesweeper_intermediate.html
@@ -15,6 +15,7 @@
         <script src="../dist/jquery.theminesweeper.min.js"></script>
     </head>
     <body>
+        <h3> Use middle mouse to set a flag </h3>
         <div id="ms"></div>
         <script>
             $('#ms').theminesweeper({
