--- a/example/minesweeper_beginner.html
+++ b/example/minesweeper_beginner.html
@@ -15,10 +15,11 @@
         <script src="../dist/jquery.theminesweeper.min.js"></script>
     </head>
     <body>
-        <h3> Use middle mouse to set a flag </h3>
+        <h3> Use right click to set a flag </h3>
+        <h3> Use middle mouse to use a hint </h3>
         <div id="ms"></div>
         <script>
-            $('#ms').theminesweeper().draggable();
+            $('#ms').theminesweeper( { hint: true }).draggable();
         </script>
     </body>
 </html>
