game win hint bug

--- a/test/minesweeper_inuse.html
+++ b/test/minesweeper_inuse.html
@@ -18,7 +18,7 @@
         <div id="ms"></div>
         <script>
 
-            $('#ms').theminesweeper( { hint: true } ).draggable();
+            $('#ms').theminesweeper( { hint: true, hintc: 100 } ).draggable();
 
         </script>
     </body>
